<?xml version="1.0"?>
<package format="3">
  <name>nav2_local_only</name>
  <version>0.0.1</version>
  <description>Nav2 local controller only bringup</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>dwb_core</exec_depend>
  <exec_depend>dwb_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
